<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marconota.mozzarella_card.MainActivity">


    <RelativeLayout
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <ImageView
        android:id="@+id/muuzzarella_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/muuzzarella_imageview"
        />


    <ImageView
        android:id="@+id/dishes_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/muuzzarella_imageview"
        android:adjustViewBounds="true"
        android:src="@drawable/dishes_bar"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/Logo_marginLeft"
        android:layout_marginTop="@dimen/Logo_marginTop"
        android:src="@drawable/logo_muuzzarella"
        />


        <TextView
        android:id="@+id/muuzzarella_lounge_text"
            style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dishes_bar"
        android:text="@string/business_name_text"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/description_text"
        style="@style/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/muuzzarella_lounge_text"
        android:text="@string/description_text"
        />


    <TextView
        android:id="@+id/address"
        style="@style/business_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_text"
        android:drawableLeft="@drawable/address_icon"
        android:linksClickable="true"
        android:text="@string/address_text"
        android:textSize="@dimen/business_information_textSize"
        />
    <TextView
        android:id="@+id/phone_number"
        style="@style/business_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:autoLink="all"
        android:drawableLeft="@drawable/phone_icon"
        android:linksClickable="true"
        android:text="@string/phone_number_text"
        android:textColorLink="@color/links_color"
        android:textSize="@dimen/business_information_textSize"
        />
    <TextView
        android:id="@+id/email_text"
        style="@style/business_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:autoLink="all"
        android:drawableLeft="@drawable/email_icon"
        android:linksClickable="true"
        android:text="@string/email_text"
        android:textColorLink="@color/links_color"
        />

    <TextView
        android:id="@+id/opening_hours_text"
        style="@style/business_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_text"
        android:drawableLeft="@drawable/hours_icon"
        android:text="@string/opening_hours_text"
        />
    <TextView
        android:id="@+id/website_text"
        style="@style/business_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/opening_hours_text"
        android:autoLink="all"
        android:drawableLeft="@drawable/website_icon"
        android:linksClickable="true"
        android:text="@string/website_text"
        android:textColorLink="@color/links_color"
        />


    </RelativeLayout>
</ScrollView>